# date

./: CMakeLists.txt
include/date/: date.h
src/: date.c  main.c
